--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=tennis_track
+APP_NAME=tennis-track
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -11,8 +11,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=tennis_track_db
-DB_USERNAME=tennis_track_user
+DB_DATABASE=tennis-track_db
+DB_USERNAME=tennis-track_user
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
