clear: リセットパスワード機能関連をリファクタ

--- a/.docker/schemaspy/schemaspy.properties
+++ b/.docker/schemaspy/schemaspy.properties
@@ -6,10 +6,10 @@ schemaspy.host=db
 # DBポート番号
 schemaspy.port=3306
 # データベース名
-schemaspy.db=tennis_track_db
+schemaspy.db=tennis-track_db
 # DBスキーマ名
-schemaspy.s=tennis_track_db
+schemaspy.s=tennis-track_db
 # ユーザ名
-schemaspy.u=tennis_track_user
+schemaspy.u=tennis-track_user
 # ユーザパスワード
 schemaspy.p=password
