--- a/backend/.env.testing
+++ b/backend/.env.testing
@@ -62,3 +62,6 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 MIHON_API_KEY=""
 MIHON_API_SECRET=""
 MIHON_LOGIN_ID=""
+
+SPORT_RADAR_API_ENDPOINT_BASE="https://api.sportradar.com"
+SPORT_RADAR_API_KEY=""
