--- a/.openapi/src/responses/500InternalServerError.yaml
+++ b/.openapi/src/responses/500InternalServerError.yaml
@@ -7,7 +7,7 @@ content:
           properties:
             data:
               type: object
-        - $ref: '../schemas/Response.yaml'
+        - $ref: '../schemas/common/Response.yaml'
     examples:
       Server error:
         value:
