--- a/.openapi/src/index.yaml
+++ b/.openapi/src/index.yaml
@@ -3,9 +3,6 @@ info:
   title: tennis-track
   description: テニス情報サイト
   version: '1.0'
-  contact:
-    name: Shinji Okumoto
-    email: shinji.okumoto.0@gmail.com
   license:
     name: Tennis Track
     url: 'https://www.tennis-track.com'
@@ -22,11 +19,11 @@ tags:
 
 paths:
   '/api/v1/users/login':
-    $ref: './paths/v1/user/auth/login.yaml'
+    $ref: './paths/V1/User/Auth/Login.yaml'
   '/api/v1/users/me':
-    $ref: './paths/v1/user/auth/me.yaml'
+    $ref: './paths/V1/User/Auth/Me.yaml'
   '/api/v1/users/players':
-    $ref: './paths/v1/user/player/players.yaml'
+    $ref: './paths/V1/User/Player/Players.yaml'
 
 components:
   securitySchemes:
@@ -35,33 +32,39 @@ components:
       scheme: bearer
       bearerFormat: JWT
       description: Bearerトークンを使用した認証
+  userAgent:
+    in: header
+    name: User-Agent
+    required: true
+    type: string
+    description: クライアントのユーザーエージェント
+
   schemas:
     Response:
-      $ref: "./schemas/common/response.yaml"
-    user:
-      Player:
-        $ref: './schemas/user/player/player.yaml'
-      PostPlayer:
-        $ref: './schemas/user/player/post_player.yaml'
-      User:
-        $ref: './schemas/user/auth/user.yaml'
-      PostLogin:
-        $ref: './schemas/user/auth/post_login.yaml'
-      Token:
-        $ref: './schemas/user/auth/token.yaml'
+      $ref: "./components/Schemas/Common/Response.yaml"
+    UserPlayer:
+      $ref: './components/Schemas/User/Player/Player.yaml'
+    UserPostPlayer:
+      $ref: './components/Schemas/User/Player/PostPlayer.yaml'
+    User:
+      $ref: './components/Schemas/User/Auth/User.yaml'
+    UserPostLogin:
+      $ref: './components/Schemas/User/Auth/PostLogin.yaml'
+    UserToken:
+      $ref: './components/Schemas/User/Auth/Token.yaml'
 
   responses:
-    200OkDataEmpty:
-      $ref: './responses/200OkDataEmpty.yaml'
+    200Ok:
+      $ref: './components/responses/200Ok.yaml'
     201DataCreated:
-      $ref: './responses/201DataCreated.yaml'
+      $ref: './components/responses/201DataCreated.yaml'
     204NoContent:
-      $ref: './responses/204NoContent.yaml'
+      $ref: './components/responses/204NoContent.yaml'
     401Unauthorized:
-      $ref: './responses/401Unauthorized.yaml'
+      $ref: './components/responses/401Unauthorized.yaml'
     422InvalidRequest:
-      $ref: './responses/422InvalidRequest.yaml'
+      $ref: './components/responses/422InvalidRequest.yaml'
     500InternalServerError:
-      $ref: './responses/500InternalServerError.yaml'
+      $ref: './components/responses/500InternalServerError.yaml'
     503ServiceUnavailable:
-      $ref: './responses/503ServiceUnavailable.yaml'
+      $ref: './components/responses/503ServiceUnavailable.yaml'
