--- a/.docker/schemaspy/Dockerfile
+++ b/.docker/schemaspy/Dockerfile
@@ -1,9 +1,4 @@
-FROM --platform=linux/amd64 schemaspy/schemaspy:6.1.0
+FROM schemaspy/schemaspy:6.2.4
 
 ENV TZ=Asia/Tokyo
-USER root
-
-COPY schemaspy.properties .
-
-ADD https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.30/mysql-connector-java-8.0.30.jar \
-    /drivers/mysql-connector-java-8.0.30.jar
+ENV SCHEMASPY_OUTPUT=/output
