add: schemaspyをECR運用にするための実装

--- a/.docker/schemaspy/Dockerfile
+++ b/.docker/schemaspy/Dockerfile
@@ -1,4 +1,14 @@
 FROM schemaspy/schemaspy:6.2.4
 
-ENV TZ=Asia/Tokyo
-ENV SCHEMASPY_OUTPUT=/output
+USER root
+
+RUN apk --update --no-cache add \
+    python3 \
+    curl
+
+RUN curl https://bootstrap.pypa.io/get-pip.py |python3
+RUN pip install awscli
+
+COPY ./entrypoint.sh /
+
+ENTRYPOINT ["/entrypoint.sh"]
