--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,11 @@ services:
       - ./.docker/nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - app
+    networks:
+      frontend:
+        ipv4_address: 172.16.238.10
+      backend:
+        ipv4_address: 172.16.239.10
 
   app:
     container_name: ${PROJECT_NAME}_app
@@ -30,6 +35,9 @@ services:
       - redis
       - minio
       - mailhog
+    networks:
+      backend:
+        ipv4_address: 172.16.239.20
 
   db:
     container_name: ${PROJECT_NAME}_db
@@ -46,12 +54,18 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       TZ: Asia/Tokyo
+    networks:
+      backend:
+        ipv4_address: 172.16.239.30
 
   redis:
     container_name: ${PROJECT_NAME}_redis
     image: redis:6.0.5
     ports:
       - ${REDIS_HOST_PORT}:6379
+    networks:
+      backend:
+        ipv4_address: 172.16.239.40
 
   minio:
     container_name: ${PROJECT_NAME}_minio
@@ -64,6 +78,9 @@ services:
       MINIO_SECRET_KEY: secret_key
       MINIO_DEFAULT_BUCKETS: uploads:public
     command: server /export --address :9999 --console-address :9001
+    networks:
+      backend:
+        ipv4_address: 172.16.239.50
 
   create-bucket:
     image: minio/mc
@@ -78,6 +95,9 @@ services:
         mc anonymous set public minio/uploads
     depends_on:
       - minio
+    networks:
+      backend:
+        ipv4_address: 172.16.239.60
 
   mailhog:
     container_name: ${PROJECT_NAME}_mailhog
@@ -85,6 +105,9 @@ services:
     ports:
       - "1025:1025"
       - "8025:8025"
+    networks:
+      backend:
+        ipv4_address: 172.16.239.70
 
   # queue_worker:
   #   container_name: ${PROJECT_NAME}_queue_worker
@@ -102,14 +125,12 @@ services:
   #     - /${SOURCE_DIR_NAME}/node_modules
   #     - /${SOURCE_DIR_NAME}/vendor
 
-  schemaspy:
-    container_name: ${PROJECT_NAME}_schemaspy
-    build: 
-      context: .docker/schemaspy
-    volumes:
-      - .docker/schemaspy/schemaspy.properties:/schemaspy.properties
-      - ./backend/public/schemaspy:/output
-    depends_on:
-      - db
-    environment:
-      SCHEMASPY_OUTPUT: /output
+networks:
+  frontend:
+    ipam:
+      config:
+        - subnet: 172.16.238.0/24
+  backend:
+    ipam:
+      config:
+        - subnet: 172.16.239.0/24
