--- a/.openapi/src/components/Responses/422InvalidRequest.yaml
+++ b/.openapi/src/components/Responses/422InvalidRequest.yaml
@@ -9,7 +9,7 @@ content:
               type: object
           required:
             - data
-        - $ref: '../schemas/common/Response.yaml'
+        - $ref: "../schemas/common/Response.yaml"
     examples:
       Validation Error:
         value:
