--- a/.openapi/src/paths/v1/user/auth/login.yaml
+++ b/.openapi/src/paths/v1/user/auth/login.yaml
@@ -5,7 +5,7 @@ post:
   tags:
     - Auth
   parameters:
-    - $ref: "#/components/userAgent"
+    - $ref: "#/components/schemas/userAgent"
   requestBody:
     content:
       application/json:
