--- a/.openapi/src/paths/v1/user/player/players.yaml
+++ b/.openapi/src/paths/v1/user/player/players.yaml
@@ -5,7 +5,7 @@ get:
   tags:
     - Player
   parameters:
-    - $ref: "#/components/userAgent"
+    - $ref: "#/components/schemas/userAgent"
     - schema:
         type: string
       in: query
